Add in tags to Post